F2F-485 Make it possible to fetch a cv by reference number
