# handlers.ts
@@ -1,77 +1,118 @@
+import { Cv } from "./cv.ts"
+
+export type PotentialPromise<T> = T | Promise<T>
+
 export type CustomHandlerCallback = (
-	request: Request,
-) => PotentialPromise<Response>;
+	request: Request
+) => PotentialPromise<Response>
+
+type ApiHandler = (request: Request) => Response | Promise<Response>
+type ApiHandlers = Record<string, ApiHandler>
 
 export interface CustomHandler {
-	method: "GET" | "POST" | "PUT" | "DELETE" | "PATCH";
-	path: string;
-	handler: CustomHandlerCallback;
+	method: "GET" | "POST" | "PUT" | "DELETE" | "PATCH"
+	path: string
+	handler: CustomHandlerCallback
 }
-
-export type PotentialPromise<T> = T | Promise<T>;
 
 export interface Handlers {
+	cv?: (referenceNr: string) => PotentialPromise<Cv>
 	checkCredentials?: (
 		username: string,
-		password: string,
-	) => PotentialPromise<boolean>;
+		password: string
+	) => PotentialPromise<boolean>
 }
 
-type ApiHandler = (request: Request) => Response | Promise<Response>;
-type ApiHandlers = Record<string, ApiHandler>;
-
 const notImplementedResponse = () =>
-	new Response("Not Implemented", { status: 404 });
+	new Response("Not Implemented", { status: 404 })
 
 export function resolveApiHandler(
 	handlers: Handlers,
 	method: string,
-	path: string,
+	path: string
 ): ApiHandler | undefined {
-	return apiHandlers(handlers)[`${method} ${path}`];
+	return apiHandlers(handlers)[`${method} ${path}`]
 }
 
 function apiHandlers(handlers: Handlers): ApiHandlers {
 	return {
 		"GET /health": () => Response.json({ status: "ok" }, { status: 200 }),
-		"POST /check-credentials": async (request) => {
-			if (!handlers.checkCredentials) {
-				return notImplementedResponse();
+		"POST /cv": async (request) => {
+			if (!handlers.cv) {
+				return notImplementedResponse()
 			}
 
-			const body = request.json();
+			const body = await request.json()
+
+			const bodyError = () =>
+				new Response("Expected a body with a referenceNr", {
+					status: 400,
+				})
+
+			if (typeof body !== "object" || body === null) {
+				return bodyError()
+			}
+
+			if (!("referenceNr" in body)) {
+				return bodyError()
+			}
+
+			if (typeof body.referenceNr !== "number") {
+				body.referenceNr = body.referenceNr.toString()
+			} else if (typeof body.referenceNr !== "string") {
+				return bodyError()
+			}
+
+			try {
+				const cv = await handlers.cv(body.referenceNr)
+				return Response.json({ cv })
+			} catch (e) {
+				console.log("Failed to fetch cv, error:")
+				console.log(e)
+				return Response.json(
+					{ error: "Failed to fetch cv by reference number" },
+					{ status: 500 }
+				)
+			}
+		},
+		"POST /check-credentials": async (request) => {
+			if (!handlers.checkCredentials) {
+				return notImplementedResponse()
+			}
+
+			const body = request.json()
 
 			const bodyError = () =>
 				new Response("Expected a body with a username and password", {
 					status: 400,
-				});
+				})
 
 			if (typeof body !== "object" || body === null) {
-				return bodyError();
+				return bodyError()
 			}
 			if (!("username" in body) || typeof body.username !== "string") {
-				return bodyError();
+				return bodyError()
 			}
 			if (!("password" in body) || typeof body.password !== "string") {
-				return bodyError();
+				return bodyError()
 			}
 
 			try {
 				const valid = await handlers.checkCredentials(
 					body.username,
-					body.password,
-				);
-				return Response.json({ valid });
+					body.password
+				)
+				return Response.json({ valid })
 			} catch (e) {
-				console.log("Failed to check credentials, error:");
-				console.log(e);
+				console.log("Failed to check credentials, error:")
+				console.log(e)
 				return Response.json(
 					{ error: "Failed to check credentials" },
-					{ status: 500 },
-				);
+					{ status: 500 }
+				)
 			}
 		},
-	};
+	}
 }
 
 // Finds the handler for the given method and path, or returns undefined if there is
@@ -79,11 +120,11 @@ function apiHandlers(handlers: Handlers): ApiHandlers {
 export function resolveExternalHandler(
 	handlers: Map<string, CustomHandlerCallback>,
 	method: string,
-	path: string,
+	path: string
 ): ApiHandler | undefined {
 	if (handlers.has(`${method} ${path}`)) {
-		return handlers.get(`${method} ${path}`)!;
+		return handlers.get(`${method} ${path}`)!
 	}
 
-	return undefined;
+	return undefined
 }
